frameworks/backend/redis/content/operate/rs/7.8/security/certificates/_index.md
---
type: "Framework Learn Page"
framework: "Redis"
source_repo: "https://github.com/redis/docs.git"
source_branch: "main"
source_path: "content/operate/rs/7.8/security/certificates/_index.md"
source_commit: "f8693349287b0efbef3c865b6f6a2aceca88594d"
source_commit_short: "f869334"
source_commit_date: "2026-08-28T10:01:19-05:00"
generated_at: "2026-08-29T09:38:55.460408Z"
---
# _Index

---
Title: Certificates
alwaysopen: false
categories:
- docs
- operate
- rs
description: An overview of certificates in Redis Enterprise Software.
hideListLinks: true
linkTitle: Certificates
weight: 60
url: '/operate/rs/7.8/security/certificates/'
---

Redis Enterprise Software uses self-signed certificates by default to ensure that the product is secure. These certificates are autogenerated on the first node of each Redis Enterprise Software installation and are copied to all other nodes added to the cluster.

You can replace a self-signed certificate with one signed by a certificate authority of your choice.

## Supported certificates

Here's the list of supported certificates that create secure, encrypted connections to your Redis Enterprise Software cluster:

| Certificate name | Autogenerated | Description |
|------------------|:---------------:|-------------|
| `api` | <span title="Yes">&#x2705;</span> | Encrypts [REST API]({{< relref "/operate/rs/7.8/references/rest-api/" >}}) requests and responses. |
| `cm` | <span title="Yes">&#x2705;</span> | Secures connections to the Redis Enterprise Cluster Manager UI. |
| `ldap_client` | <span title="No">:x:</span> | Secures connections between LDAP clients and LDAP servers. |
| `metrics_exporter` | <span title="Yes">&#x2705;</span> | Sends Redis Enterprise metrics to external [monitoring tools]({{< relref "/operate/rs/7.8/monitoring/" >}}) over a secure connection. |
| `mtls_trusted_ca` | <span title="No">:x:</span>  | Required to enable certificate-based authentication for secure, passwordless access to the REST API. |
| `proxy` | <span title="Yes">&#x2705;</span> | Creates secure, encrypted connections between clients and databases. |
| `syncer` | <span title="Yes">&#x2705;</span> | For [Active-Active]({{< relref "/operate/rs/7.8/databases/active-active/" >}}) or [Replica Of]({{< relref "/operate/rs/7.8/databases/import-export/replica-of/" >}}) databases, encrypts data during the synchronization of participating clusters. |

Certificates that are not autogenerated are optional unless you want to use certain features. For example, you must provide your own `ldap_client` certificate to enable [LDAP authentication]({{<relref "/operate/rs/7.8/security/access-control/ldap">}}) or an `mtls_trusted_ca` certificate to enable certificate-based authentication.

## Accept self-signed certificates to access the Cluster Manager UI

When you use the default self-signed certificates and you connect to the Cluster Manager UI over a web browser, you'll see an untrusted connection notification. Depending on your browser, you can allow the connection for each session or add an exception to trust the certificate for all future sessions.
